Bug 277845 - accounts-kcm allows creation of duplicate account
Summary: accounts-kcm allows creation of duplicate account
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: accounts-kcm (other bugs)
Version First Reported In: git-latest
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-15 17:02 UTC by Karan Pratap Singh
Modified: 2012-07-06 12:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The Duplicate Account can be seen in this screenshot! (416.94 KB, image/png)
2011-07-15 17:02 UTC, Karan Pratap Singh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karan Pratap Singh 2011-07-15 17:02:35 UTC
Created attachment 61896 [details]
The Duplicate Account can be seen in this screenshot!

Version:           git-latest (using Devel) 
OS:                Linux

When I create an account using the add account wizard in accounts-kcm, and if I am entering the same details as an existing account, then the accounts-kcm creates the duplicate account, which appears as disconnected.

Reproducible: Always

Steps to Reproduce:
Just add a new account and enter the same username and password as an existing account.

Actual Results:  
accounts-kcm creates a duplicate account blindly.

Expected Results:  
accounts-kcm should at least check if an account with the same details is already present in the accounts list or not. If an account is already present, then accounts-kcm should not let a duplicate one to be added.

I will be very grateful if this bug is solved soon...KDE Plasma Educational Desktop's authorization feature may depend on it!
Comment 1 Francesco Nwokeka 2011-10-25 09:58:44 UTC
Git commit bf294eaef7f8f68b3fcc9fddaf3cfce6f112bedc by Francesco Nwokeka.
Committed on 25/10/2011 at 11:58.
Pushed by nwokeka into branch 'master'.

Fix creation of duplicate accounts

duplicate accounts can't be created anymore.
BUG: 277845
REVIEW: 102962
Reviewed By: Martin Klapetek

M  +11   -2    src/add-account-assistant.cpp

http://commits.kde.org/telepathy-accounts-kcm/bf294eaef7f8f68b3fcc9fddaf3cfce6f112bedc