Fix creation of duplicate accounts

duplicate accounts can't be created anymore.
BUG: 277845
REVIEW: 102962
Reviewed By: Martin Klapetek